--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,8 @@
     "@babel/plugin-transform-object-assign",
     "@babel/plugin-transform-react-jsx",
     "babel-plugin-transform-class-properties",
-    "babel-plugin-transform-regenerator"
+    "babel-plugin-transform-regenerator",
+    "@babel/plugin-transform-destructuring",
+    "transform-es2015-destructuring"
   ]
 }
