--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-syntax-throw-expressions": "^7.2.0",
+    "@babel/plugin-transform-destructuring": "^7.3.2",
     "@babel/plugin-transform-object-assign": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
@@ -25,6 +26,7 @@
     "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^4.6.0",
@@ -34,10 +36,11 @@
     "enzyme-to-json": "^3.3.5",
     "eslint": "^5.13.0",
     "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-async-await": "0.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-async-await": "0.0.0",
+    "eslint-plugin-react-hooks": "^1.5.1",
     "eslint-plugin-react-native": "^3.6.0",
     "file-loader": "^3.0.1",
     "jest": "^24.1.0",
@@ -54,13 +57,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bulma": "^0.7.4",
+    "eslint-plugin-jest": "^22.4.1",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
     "moment": "^2.24.0",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
+    "react": "^16.8.0",
     "react-dates": "^18.4.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.0",
     "react-modal": "^3.8.1",
     "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
