--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react-test-renderer": "^16.7.0",
+    "react-testing-library": "^6.0.2",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
